# nitrogfx-py

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
nitrogfx/: __init__.py  convert.py  ncer.py  ncgr.py  nclr.py  nscr.py  util.py
src/nitrogfx/: __init__.py  convert.py  nanr.py  ncer.py  ncgr.py  nclr.py  nscr.py  util.py
src/nitrogfx/c_ext/: tilemodule.c
src/ntr/: convert.py  ncgr.py  nclr.py  nscr.py  util.py
src/tests/: convert_test.py  ncgr_test.py  nclr_test.py  nscr_test.py  util_test.py
test_data/: big_anim.NANR  multi_oam.NCER  ncer.json  npc.NCBR
test_data/edu011_LZ.bin/: edu011.NCGR  edu011.NSCR
tests/: convert_test.py  nanr_test.py  ncer_test.py  ncgr_test.py  nclr_test.py  nscr_test.py  util_test.py
