[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nitrogfx-py"
version = "1.1.0-dev"
keywords = ["NDS", "Nintendo DS", "NCGR", "NCLR", "NSCR", "NCER", "NANR"]
authors = [
  { name="Fexean", email="3699814-Fexean@users.noreply.gitlab.com" },
  { name="Xzonn", email="Xzonn@outlook.com" },
]
description = "Nintendo DS Graphic format library"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
	"Pillow>=7.0.0"
]

[project.optional-dependencies]
extra = ["orjson"] # for better performance on json conversion functions


[project.urls]
"Homepage" = "https://gitlab.com/Xzonn/ntrgfx-py"
